Revise learning objectives in course documentation for clarity and consistency. Update the structure of the objectives sections in 01-setup.qmd and 02-r-lang.qmd to enhance readability. Modify corresponding HTML files to reflect these changes.

--- a/01-setup.qmd
+++ b/01-setup.qmd
@@ -12,27 +12,18 @@ title: "01 Setup & intro"
 
 ## 1 Bootcamp Introduction (first day with `R`)
 
-<br>
+::: callout-note
+## Learning Objectives
 
-This page is intended to guide people during their first installation and use of R and RStudio.
+By the end of this lesson, you will be able to:
 
-<br>
-
-### 1.1 Objectives
-
-Here is what we will work on:
-
--   How the `R` Stats Bootcamp works
-
--   R motivation
-
+-   Explain how the `R` Stats Bootcamp works
+-   Describe the motivation for using `R`       
 -   Install `R` and `RStudio` **or** set up `RStudio Cloud`
+-   Describe the components of `RStudio`
+-   Perform the workflow for scripts in `R`
 
--   `RStudio` components and setup
-
--   Workflow for scripts in `R`
-
--   Practice exercises
+:::
 
 <br>
 
