--- a/03-functions.qmd
+++ b/03-functions.qmd
@@ -6,29 +6,27 @@ title: "03 R Functions"
 
 ## 1 Functions and Packages Toolboxes (R as a garage full of tools)
 
+::: callout-note
+## Learning Objectives
+
+By the end of this lesson, you will be able to:
+
+-   Describe what `R` Functions do
+-   Use`R` functions and help
+-   Describe the function of `R` packages
+-   Find, download and use `R` packages
+
+:::
+
 <br>
 
-The garage and toolbox metaphors
+**The garage and toolbox metaphors**
 
 One of the best things about `R` is that it can be customized to accomplish a huge variety of kinds of tasks: perform all sorts of statistical analyses from simple to bleeding edge, produce professional graphs, format analyses into presentations, manuscripts and web pages, collaboration, GIS and mapping, and a lot more. The tools themselves are contained in toolboxes and in a given toolbox, the tools are related to each other, usually in a focus to the kind of tasks they are suited for.
 
 > The tools in `R` are **functions**, and the toolboxes are **packages**.
 
 While `R` comes with a lot of packages, there is an enormous amount available for instant download at any time you want or need them (over 18,000 different packages at the moment...). Making use of all these resources is usually a case of identifying a problem to solve, finding the package that can help you, and then learning how to use the functions in the package This page is all about introducing functions, packages and the `R` help system.
-
-<br>
-
-### 1.1 Objectives
-
--   Function tour
-
--   Using functions and getting help
-
--   `R` packages
-
--   Finding, downloading and using packages
-
--   Practice exercises
 
 <br>
 
