Revise learning objectives in 02-r-lang.qmd and 04-data.qmd for clarity and consistency. Update corresponding HTML and search.json files to reflect these changes, enhancing the overall presentation of the course material.

--- a/01-setup.qmd
+++ b/01-setup.qmd
@@ -21,7 +21,7 @@ By the end of this lesson, you will be able to:
 -   Describe the motivation for using `R`       
 -   Install `R` and `RStudio` **or** set up `RStudio Cloud`
 -   Describe the components of `RStudio`
--   Perform the workflow for scripts in `R`
+-   Describe script structure
 
 :::
 
